<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/inter_block_margin"
        android:layout_below="@id/card_movie_details"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:id="@+id/tv_trailer_title"
            android:layout_marginTop="@dimen/inter_block_margin"
            android:layout_below="@id/card_movie_details"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:text="@string/movie_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailer"
            android:layout_marginTop="@dimen/inter_view_margin"
            android:layout_below="@+id/tv_trailer_title"
            app:layoutManager="LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <View
            android:id="@+id/stub_3"
            android:layout_below="@+id/rv_trailer"
            android:layout_marginTop="@dimen/inter_block_margin"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/inter_view_margin"
            android:layout_height="@dimen/small_padding" />

    <TextView
            android:id="@+id/reviews"
            android:textSize="@dimen/big_text_size"
            android:text="@string/movie_reviews"
            android:layout_below="@+id/stub_3"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_review_list"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager"
            android:layout_below="@+id/reviews"
            android:layout_marginTop="@dimen/inter_view_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_click_more"
            android:textSize="@dimen/title_text_size"
            android:text="@string/more_reviews"
            android:gravity="center"
            android:layout_marginTop="@dimen/inter_block_margin"
            android:layout_below="@+id/rv_review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</RelativeLayout>